[package]
name = "mlspp-sys"
version = "0.2.0"
edition = "2024"
links = "mlspp"
license = "MIT"
keywords = ["bindings", "crypto"]
categories = ["cryptography"]
description = "Messaging Layer Security system bindings crate in Rust"
repository = "https://github.com/coral/mlspp-sys"
exclude = [
    "vendor/json/docs/",
    "vendor/json/tests/",
    "vendor/json/tools/",
    "vendor/mlspp/lib/hpke/test/",
    "vendor/mlspp/lib/hpke/scripts/",
    "vendor/mlspp/test/",
    "vendor/mlspp/cmd/",
    "vendor/mlspp/alternatives/",
    "vendor/mlspp/scripts/",
]

[dependencies]
openssl-sys = "0.9"

[build-dependencies]
cmake = "0.1"
cc = "1"
bindgen = "0.71"

[features]
default = ["vendored"]
vendored = []
system = []
libdave-compat = []
